<resources>
    <string name="app_name">土豆金服</string>
    <string name="homepage">首页</string>
    <string name="licai">理财</string>
    <string name="licai1">投资</string>
    <string name="faxian">发现</string>
    <string name="my">我的</string>
    <string name="act_login_username">请输入用户名/手机号</string>
    <string name="act_login_password">请输入密码(6&#8211;16位数字和字母组合)</string>
    <string name="act_login_nozhanghao">没有账号?</string>
    <string name="act_login_zhuceyouli"><u>注册即可领28888元体验金</u></string>
    <string name="act_login_forgetpassword"><u>忘记密码?</u></string>
    <string name="act_login_login">登录</string>
    <string name="act_register_username">请输入手机号</string>
    <string name="act_register_imagecode">请输入图形验证码</string>
    <string name="act_register_phonecodehint">请输入手机验证码</string>
    <string name="act_register_requestcode">获取验证码</string>
    <string name="act_register_referrerhint">请输入推荐人(如无推荐人可不填写)</string>
    <string name="act_register_login"><u>已有账号,去登录</u></string>
    <string name="act_register_agree">注册即视为同意</string>
    <string name="act_register_tudouxieyi">《土豆金服服务协议》</string>
    <string name="act_affirm_title">确认新密码</string>
    <string name="act_affirm_password2">确认新密码</string>
    <string name="act_affirm_complete">完成</string>
    <string name="act_find_title">找回密码</string>
    <string name="act_find_next">下一步</string>
    <string name="act_find_username">请输入手机号</string>
    <string name="act_register_register">注册领取28888元体验金</string>
    <string name="lockscreen_access_pattern_start">开始绘制图案</string>
    <string name="lockscreen_access_pattern_cleared">图案已清除</string>
    <string name="lockscreen_access_pattern_cell_added">已添加单元格</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">重试</string>
    <string name="lockpattern_continue_button_text">继续</string>
    <string name="lockpattern_confirm_button_text">确认</string>
    <string name="lockpattern_recording_intro_header">绘制解锁图案</string>
    <string name="lockpattern_settings_help_how_to_record">如何绘制解锁图案</string>
    <string name="lockpattern_recording_incorrect_too_short">至少连接4个点，请重试</string>
    <string name="lockpattern_pattern_entered_header">图案已记录</string>
    <string name="lockpattern_need_to_confirm">请再次绘制解锁图案</string>
    <string name="lockpattern_need_to_unlock_wrong">与上次输入不一致，请重试</string>
    <string name="lockpattern_pattern_confirmed_header">确认保存新解锁图案</string>
    <string name="lockpattern_recording_inprogress">完成后松开手指</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="act_lock_welcom">欢迎您,XXXXXXXXXXX</string>
    <string name="act_lock_forget">忘记手势密码</string>
    <string name="act_lock_other">使用账号登录</string>
    <string name="errormoretimes">输入错误次数过多,请等待5分钟后再次重试</string>
    <string name="inputsucess">输入成功</string>
    <string name="act_drawgesture_pass">直接跳过</string>
    <string name="act_drawgesture_error">手势密码前后输入不一致,请重新输入</string>
    <string name="act_drawgesture_sucess">手势密码设置成功!</string>
    <string name="act_drawgesture_hint">手势密码不能少于4个连接点,请重新设置</string>
    <string name="mlockview_sucess">手势密码验证成功!</string>
    <string name="act_productdetails_temptitle">房产抵押借款20170327003</string>
    <string name="act_productdetails_rongzijine">融资金额</string>
    <string name="act_productdetails_shengyuketou">剩余可投</string>
    <string name="act_productdetails_huankuanfangshi">还款方式</string>
    <string name="act_productdetails_jieshushujian">结束时间</string>
    <string name="act_productdetails_touzirenshu">投资人数</string>
    <string name="act_productdetails_jiekuanzhuangtai">借款状态</string>
    <string name="act_productdetails_xiangmuxiangqing">项目详情</string>
    <string name="act_productdetails_changjianwenti">常见问题</string>
    <string name="act_productdetails_touziliebiao">投资列表</string>
    <string name="act_productdetails_xiangmumiaoshu">项目描述</string>
    <string name="act_productdetails_miaoshuneirong">\t\t\t\t孙先生,青岛某驴皮加工企业企业主,主营驴皮阿胶加工销售,年销售额2000万左右;孙女士(孙先生妻子,共同借款人),房产位于青岛市市南区高田路,建筑面积141.15平,市场价值约245万.</string>
    <string name="act_productdetails_huankuanbaozhang">还款保障</string>
    <string name="act_productdetails_baozhangneirong">\t\t\t\t\t\t\t\t1.借款人每个月的经营收入\n\t\t\t\t\t\t\t\t2.抵押房产</string>
    <string name="act_productdetails_fengkongyijian">风控意见</string>
    <string name="act_productdetails_fegnkongneirong">\t\t\t\t经实地走访,借款人实际经营状况良好,居住稳定,无其他不良信息.本次转让金额5万元,剩余未转让金额0万元.</string>
    <string name="act_productdetails_baozhangjigou">保障机构</string>
    <string name="act_productdetails_jigouneirong">\t\t\t\t财产基本险由泰山财产保险股份有限公司承保,保单号:
    202140101032017000049;\n\t\t\t\t本项目由合作方(青岛某经济咨询信息有限公司)提供风险保障,如债务人发生违约一日后合作方进行债权回购.</string>
    <string name="act_productdetails_fengxiantishi">风险提示</string>
    <string name="act_productdetails_fengxianneirong">\t\t\t\t\t\t\t\t请平台投资人自行评估风险,谨慎投资.</string>
    <string name="act_productdetails_xiangmuziliao">项目资料照片</string>
    <string name="act_productdetails_lijigoumai">立即购买</string>
    <string name="act_affirmbuy_yujihuodeshouyi">预计获得收益(元)</string>
    <string name="act_affirmbuy_qitoujine">起投金额(元)</string>
    <string name="act_affirmbuy_touzishangxian">投资上限(元)</string>
    <string name="act_affirmbuy_lixishouyi">利息收益(元)</string>
    <string name="act_affirmbuy_jianglishouyi">奖励收益(元)</string>
    <string name="act_affirmbuy_ketouzijine">可投资金额</string>
    <string name="act_affirmbuy_zhanghuyue">账户余额</string>
    <string name="act_affirmbuy_chongzhi">充值</string>
    <string name="act_affirmbuy_keyonghongbao">可用红包</string>
    <string name="act_affirmbuy_keyongjiaxiquan">可用加息券</string>
    <string name="act_affirmbuy_keyongfanxianquan">返现券</string>
    <string name="act_affirmbuy_tongyi">同意</string>
    <string name="act_affirmbuy_pingtaijujianfuwuxieyi">《平台居间服务协议》,具体内容请通过电脑端进行查看</string>
    <string name="act_affirmbuy_querengoumai">确认购买</string>
    <string name="act_fanxianquansel_title">选择返现券</string>
    <string name="act_fanxianquansel_zanwu">暂无返现券</string>
    <string name="act_redpackage_hongbao">选择红包</string>
    <string name="act_redpackage_keshiyong">您有0个红包可使用</string>
    <string name="act_redpacksge_querenshiyong">确认使用</string>
    <string name="act_redpackage_danbitouzi">单笔投资满1000元,最低</string>
    <string name="act_redpackage_touziyueshu">投资0个月可使用</string>
    <string name="act_redpackage_hongbaodaxiao">50元\t抽奖红包</string>
    <string name="act_redpackage_zhuangtai">可使用</string>
    <string name="yuan">元</string>
    <string name="youxiaoqizhi">有效期至:</string>
    <string name="act_redpacksge_qingxuanze">请选择要使用的红包</string>
    <string name="cancel">取消</string>
    <string name="act_affirmbuy_inputtouzimima">请输入投资密码</string>
    <string name="act_affirmbuy_queren">确认</string>
    <string name="act_redpackage_jiaxiquan">选择加息券</string>
    <string name="act_productdetails_touzizonge">投资总额:</string>
    <string name="act_productdetails_tempdata">XX,XXX.XX元</string>
    <string name="act_productdetails_touzirenci">投资人次:</string>
    <string name="act_productdetails_tempdata1">XXX人</string>
    <string name="act_fanxianquansel_zanwuredpackage">暂无红包</string>
    <string name="act_fanxianquansel_titleredpackage">选择红包</string>
    <string name="frag_home_xinshoufuli">新手福利</string>
    <string name="frag_home_huodongzhuanqu">活动专区</string>
    <string name="frag_home_tuijianyouli">推荐有礼</string>
    <string name="frag_home_xinxipilou">信息披露</string>
    <string name="frag_home_xinshouzhuanxiangbiao">新手专享标</string>
    <string name="frag_home_lijitouzi">立即投资</string>
    <string name="touzijineyuan">投资金额(元)</string>
    <string name="touzijine">投资金额</string>
    <string name="touzishijian">投资时间</string>
    <string name="yishoulixi">已收利息</string>
    <string name="daishoulixi">代收利息</string>
    <string name="zhuangtai">状态</string>
    <string name="frag_home_touziqixian">投资期限</string>
    <string name="frag_home_yuqinianhuashouyi">预期年化收益</string>
    <string name="dialog_zanbukaitong">暂不开通</string>
    <string name="dialog_lijikaitong">立即开通</string>
    <string name="dialog_tishi">为了您的资金安全\n请开通资金托管账户</string>
    <string name="act_newcommerexperiencebid_title">新手体验标</string>
    <string name="act_newcommerexperiencebid_yitoujine">已投金额</string>
    <string name="act_newcommerexperiencebid_huankuanfangshi">还款方式</string>
    <string name="act_newcommerexperiencebid_touzirenshu">投资人数</string>
    <string name="act_newcommerexperiencebid_jiaoyijilu">交易记录</string>
    <string name="act_newcommerexperiencebid_touziren">投资人</string>
    <string name="act_newcommerexperiencebid_dianjijiazaigengduo">点击加载更多</string>
    <string name="act_newcommerexperiencebid_lijitoubiao">立即投标</string>
    <string name="act_infopublish_title">信息披露</string>
    <string name="act_infopublish_gongsijieshao">公司介绍</string>
    <string name="act_infopublish_gongsijianjie">公司简介</string>
    <string name="act_infopublish_gongsidizhi">公司地址</string>
    <string name="act_infopublish_chuangshiren">创始人</string>
    <string name="act_infopublish_anquancuoshi">安全措施</string>
    <string name="act_infopublish_jiuchonganquandun">九重安全盾</string>
    <string name="act_infopublish_anquanbaozhang">安全保障</string>
    <string name="act_infopublish_guanyuwomen">关于我们</string>
    <string name="act_infopublish_tudoushijiao">土豆视角</string>
    <string name="act_infopublish_meitibaodao">媒体报道</string>
    <string name="act_infopublish_tudoudashiji">土豆大事记</string>
    <string name="act_infopublish_yunyingmoshi">运营模式</string>
    <string name="act_infopublish_zuzhijiagou">组织架构</string>
    <string name="act_infopublish_hezuohuoban">合作伙伴</string>
    <string name="act_infopublish_pingtaishuju">平台数据</string>
    <string name="act_infopublish_meirigengxinyici">每日更新一次</string>
    <string name="frag_managemoneymatters_lefttitle">投资列表</string>
    <string name="frag_managemoneymatters_righttitle">债权列表</string>
    <string name="xinshouzhuanxiang">新手专享</string>
    <string name="qixian">期限</string>
    <string name="jineyuan">金额(元)</string>
    <string name="shengyuketou">剩余可投:</string>
    <string name="huankuanzhong">还款中</string>
    <string name="frag_managemoneymatters_quanbu">全部</string>
    <string name="frag_managemoneymatters_anlilv">按利率</string>
    <string name="frag_managemoneymatters_anqixian">按期限</string>
    <string name="frag_managemoneymatters_anhuankuanfangshi">按还款方式</string>
    <string name="act_myexperiencegold_title">我的体验金</string>
    <string name="act_myexperiencegold_keyongtiyanjin">可用体验金</string>
    <string name="act_myexperiencegold_zhanghuzongzichan">账户总资产(元)</string>
    <string name="act_myexperiencegold_keyongyue">可用余额(元)</string>
    <string name="act_myexperiencegold_temp">--.--</string>
    <string name="act_safetycontrol_title">安全保障</string>
    <string name="chakangengduo">查看更多</string>
    <string name="dengebenxi">等额本息</string>
    <string name="daoqihuanbenxi">到期还本息</string>
    <string name="anyuefuxi">按月付息</string>
    <string name="act_integralrecode_default">--,---</string>
    <string name="act_myexperiencegold_wodetouzi">我的投资</string>
    <string name="yishoulixiyuan">已收利息(元)</string>
    <string name="daishoulixiyuan">待收利息(元)</string>
    <string name="act_newcomerexperiencebid_default">--------元</string>
    <string name="act_newcomerexperiencebid_default1">\????????</string>
    <string name="kefuhaoma">400-066-5811</string>
    <string name="fuwushijian">服务时间</string>
    <string name="zaowan">早8:30至晚17:30</string>
    <string name="bodakefurexian">拨打客服热线</string>
    <string name="queren">确认</string>
    <string name="shifouquerenchexiaozhaiquanzhuanrang">是否确认撤销债权转让</string>
    <string name="zhaiquanzhuanrangchexiao">债权转让撤销</string>
    <string name="san">3</string>
    <string name="cihoujiangbukeyi">次后将不可以再进行转让</string>
    <string name="gaizhaiquan">该债权您已撤销</string>
    <string name="danling">0</string>
    <string name="ci">次</string>
</resources>