<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xshape_roundrect_mwhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/fuwushijian"
        android:textColor="@color/color_black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/zaowan"
        android:textColor="@color/color_gray"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/bodakefurexian"
        android:textColor="@color/color_black"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/kefuhaoma"
        android:textColor="@color/color_orange"
        android:textSize="14sp" />

</LinearLayout>