<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/xshape_roundrect_mgray2"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/shifouquerenchexiaozhaiquanzhuanrang"
            android:textColor="@color/color_black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/zhaiquanzhuanrangchexiao"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/san"
                android:textColor="@color/color_orange"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/cihoujiangbukeyi"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/gaizhaiquan"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/danling"
                android:textColor="@color/color_orange"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/ci"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </LinearLayout>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/color_line" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_cancle"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_white"
                android:background="@drawable/xshape_roundrect_mblue"
                android:textSize="14sp" />

            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/color_line" />-->

            <TextView
                android:id="@+id/tv_queding"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:text="@string/queren"
                android:textColor="@color/color_gray"
                android:background="@drawable/xshape_roundrect_mgray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>