<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:text="@string/dengebenxi"
            android:gravity="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:text="@string/daoqihuanbenxi"

            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:text="@string/anyuefuxi"
            android:gravity="center"

            />
    </LinearLayout>

