<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tudoujf.ui.MTopBarView
        android:id="@+id/mtb_act_myexperiencegold"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/act_register_tvbac1"
        app:centerText="@string/act_myexperiencegold_title"
        app:leftImage="@drawable/xvector_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/global_theme_background_color"
        android:gravity="center"
        android:text="@string/act_myexperiencegold_keyongtiyanjin"
        android:textColor="@color/color_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_act_myexperiencegold_amount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/global_theme_background_color"
        android:gravity="center"
        android:text="@string/act_myexperiencegold_temp"
        android:textColor="@color/color_white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/global_theme_background_color"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/act_myexperiencegold_zhanghuzongzichan"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_act_myexperiencegold_amount_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/act_myexperiencegold_temp"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/act_myexperiencegold_keyongyue"
                android:textColor="@color/color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_act_myexperiencegold_amount_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/act_myexperiencegold_temp"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/global_background_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/act_myexperiencegold_wodetouzi"
        android:textColor="@color/color_black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/touzishijian"
            android:textColor="@color/color_black"
            android:layout_weight="1"
            android:background="@drawable/xshape_fourboder"
            android:textSize="12sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/touzijineyuan"
            android:textColor="@color/color_black"
            android:layout_weight="1"
            android:background="@drawable/xshape_twoboder"
            android:textSize="12sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/yishoulixiyuan"
            android:textColor="@color/color_black"
            android:layout_weight="1"
            android:background="@drawable/xshape_fourboder"
            android:textSize="12sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/daishoulixiyuan"
            android:textColor="@color/color_black"
            android:layout_weight="1"
            android:background="@drawable/xshape_twoboder"
            android:textSize="12sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/zhuangtai"
            android:textColor="@color/color_black"
            android:layout_weight="1"
            android:background="@drawable/xshape_fourboder"
            android:textSize="12sp" />
    </LinearLayout>


    <ListView
        android:id="@+id/lv_act_myexperience"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_white"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_weight="1"
        />




</LinearLayout>